--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" >
 
   <display-name>concert</display-name>
+  <context-param>  
+        <param-name>contextConfigLocation</param-name>  
+        <param-value>/WEB-INF/spring-mybatis.xml</param-value>  
+  </context-param>
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -18,11 +22,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" >
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <listener>  
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
+  </listener>
   <servlet>
 	<servlet-name>concert</servlet-name>
-	<servlet-class>
-		org.springframework.web.servlet.DispatcherServlet
-	</servlet-class>
+	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	<init-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/context.xml</param-value>
@@ -34,6 +39,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" >
         <url-pattern>/</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-  	<welcome-file>/index.jsp</welcome-file>
+  	<welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
